# local-studio

./: .gitattributes  .gitignore  API_CONTRACT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTES.md  PRIVACY.md  README.md  RELEASING.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
backend/: app.py  install.ps1  install.sh  requirements.txt  run.ps1  run.sh  test_align_precision.py  test_caption_render.py  test_e2e.py  test_inpaint_tracking.py
backend/pipeline/: __init__.py  align.py  caption.py  config.py  export.py  health.py  inpaint.py  mastering.py  models.py  pipeline.py  separate.py  tools.py  transcribe.py  vocalchain.py
backend/web/: index.html
docs/: index.html  main.js  privacy.html  styles.css
examples/: README.md
frontend/: CONTRACTS.md  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/.claude/: launch.json
frontend/public/fonts/: cjk.css
frontend/public/fonts/noto-sans-jp/: 400.css  500.css
frontend/public/fonts/noto-sans-kr/: 400.css  500.css
frontend/public/fonts/noto-sans-tc/: 400.css  500.css
frontend/public/fonts/noto-serif-jp/: 400.css  700.css
frontend/public/fonts/noto-serif-kr/: 400.css  700.css
frontend/public/fonts/noto-serif-tc/: 400.css  700.css
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/resources/python/: .gitkeep
frontend/src-tauri/src/: lib.rs
frontend/src/api/: caption.ts  client.ts  health.ts  inpaint.ts  jobs.ts  master.ts  meta.ts  models.ts  storage.ts  types.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/health/: HealthBanner.tsx  health.css
frontend/src/components/primitives/: Badge.tsx  Button.tsx  Eyebrow.tsx  Field.tsx  HairlineRule.tsx  IconButton.tsx  Pill.tsx  Popover.tsx  ProgressBar.tsx  TapeCounter.tsx  index.ts  primitives.css
frontend/src/components/setup/: SetupScreen.tsx  setup.css
frontend/src/components/shell/: AppFrame.tsx  ModeSwitch.tsx  StatusStrip.tsx  TabRail.tsx  mode-switch.css  shell.css  tabs.ts
frontend/src/components/update/: UpdateBanner.tsx  UpdateSettingsRow.tsx
frontend/src/i18n/strings/: clean.ts  common.ts  health.ts  index.ts  storage.ts  video.ts
frontend/src/lib/: exporters.ts  onset.ts  timecode.ts  waveform.ts
frontend/src/state/: useAppVersion.ts  useAudio.ts  useHealth.ts  useJob.ts  useLibrary.ts  useMeta.ts  useMode.ts  useModels.ts  usePinned.ts  useProjects.ts  useResultStore.ts  useSettings.ts  useSetup.ts  useUpdater.ts
frontend/src/styles/: fonts.css  global.css  tokens.css
frontend/src/tabs/catalog/: AddToProject.tsx  CatalogFlow.tsx  catalog.css
frontend/src/tabs/cut/: CutFlow.tsx  Inspector.tsx  LibraryPanel.tsx  Timeline.tsx  cut.css  exportHQ.ts  types.ts  useEditor.ts  usePlayback.ts  waveform.ts
frontend/src/tabs/editor/: ConfidenceMark.tsx  EditorTab.tsx  LyricDocument.tsx  SubtitleEditor.tsx  Transport.tsx  WaveformStrip.tsx  WordInspector.tsx  WordSweep.tsx  demoResult.ts  editor.css  subtitle-editor.css
frontend/src/tabs/export/: ExportActions.tsx  ExportTab.tsx  FormatLinks.tsx  FormatOptions.tsx  LivePreview.tsx  export.css  exportOptions.ts  saveFile.ts
frontend/src/tabs/settings/: DefaultsPanel.tsx  DevicePicker.tsx  EnginePicker.tsx  GpuReadout.tsx  ModelManager.tsx  ModelSizePicker.tsx  Segmented.tsx  SettingsTab.tsx  StoragePanel.tsx  modelStatus.ts  settings.css
frontend/src/tabs/transcribe/: BoxCanvas.tsx  CaptionBurn.tsx  CleanTextFlow.tsx  DownloadFlow.tsx  Dropzone.tsx  LanguageSelect.tsx  MasteringFlow.tsx  ModeCards.tsx  ReferenceEditor.tsx  SetupBanner.tsx  StageProgress.tsx  StyleChips.tsx  (+7 more)
scripts/: fetch-portable-python.ps1  fetch-portable-python.sh  make-latest-json.mjs
(+21 files in other folders)
